--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,8 @@ jobs:
       
     - name: Docker Login
       env:
-        DOCKER_USER: ${{secrects.DOCKER_USERNAME}}
-        DOCKER_PASSWORD: ${{secrects.DOCKER_PASSWORD}}
+        DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       
     - name: Docker Build Image
